Implemented Export- / Import functionality

--- a/Horizon.MagicCardTracker.Pwa/wwwroot/index.html
+++ b/Horizon.MagicCardTracker.Pwa/wwwroot/index.html
@@ -27,6 +27,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="file-saver.js"></script>
 </body>
 
 </html>
