--- a/Horizon.MagicCardTracker.Pwa/wwwroot/index.html
+++ b/Horizon.MagicCardTracker.Pwa/wwwroot/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Magic Card Tracker</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <!-- <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="css/app.css" rel="stylesheet" />
     <link href="Horizon.MagicCardTracker.Pwa.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
