--- a/MagicCardTracker.Pwa/wwwroot/index.html
+++ b/MagicCardTracker.Pwa/wwwroot/index.html
@@ -28,7 +28,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="file-saver.js"></script>
+    <script src="browser-tools.js"></script>
 </body>
 
 </html>
