Added PWA support for iOS

--- a/Sources/MagicCardTracker.Pwa/wwwroot/index.html
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Magic Card Tracker</title>
     <base href="/" />
@@ -11,7 +12,9 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="MagicCardTracker.Pwa.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" sizes="512x512" href="MCT_Logo.png" />
 </head>
 
 <body>
