--- a/Sources/MagicCardTracker.Pwa/wwwroot/index.html
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/index.html
@@ -23,18 +23,10 @@
             <img src="Loader.svg">
         </div>
     </div>
-
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-
-    <!-- This is the glue between Blazor and Chart.js -->
-    <script src="_content/ChartJs.Blazor.Fork/ChartJsBlazorInterop.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="Chart.min.js"></script>
+    <script src="_content/ChartJs.Blazor.Fork/ChartJsBlazorInterop.js"></script>
     <script src="browser-tools.js"></script>
 </body>
 
