perf: Added new loading indicator

--- a/Sources/MagicCardTracker.Pwa/wwwroot/index.html
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Magic Card Tracker</title>
     <base href="/" />
+    <script src="pace.min.js"></script>
+    <link href="css/pace.min.css" rel="stylesheet"/>
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap-icons.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet" />
@@ -19,9 +21,6 @@
 
 <body>
     <div id="app">
-        <div class="loader">
-            <img src="Loader.svg">
-        </div>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
