feat: New UI & dialogs based on tailwindcss

--- a/Sources/MagicCardTracker.Pwa/wwwroot/index.html
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/index.html
@@ -8,18 +8,15 @@
     <title>Magic Card Tracker</title>
     <base href="/" />
     <script src="pace.min.js"></script>
-    <link href="css/pace.min.css" rel="stylesheet"/>
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-icons.css" rel="stylesheet"/>
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="MagicCardTracker.Pwa.styles.css" rel="stylesheet" />
+    <link href="pace.min.css" rel="stylesheet"/>
+    <link href="app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" sizes="512x512" href="MCT_Logo.png" />
 </head>
 
-<body>
+<body class="bg-neutral-800 text-white overflow-none">
     <div id="app">
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
